# boreholeai-python

./: LICENSE  README.md  hatch_build.py  pyproject.toml  test.py
examples/: basic_usage.py  quickstart.ipynb
src/boreholeai/: __init__.py  _api.py  _files.py  _types.py  _version.py  client.py  exceptions.py
