[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "boreholeai"
version = "0.1.0"
description = "Python SDK for the BoreholeAI API — digitise borehole logs programmatically"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
authors = [{ name = "BoreholeAI", email = "support@boreholeai.com" }]
keywords = ["boreholeai", "geotechnical", "borehole", "digitisation", "api"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "httpx>=0.24,<1",
]

[project.urls]
Homepage = "https://boreholeai.com"
Documentation = "https://boreholeai.com/docs"
Repository = "https://github.com/Quin-L/boreholeai-python"

[tool.hatch.build.targets.wheel]
packages = ["src/boreholeai"]
